--- a/assets/less/about.less
+++ b/assets/less/about.less
@@ -13,8 +13,15 @@
         justify-content: flex-end;
 
         .nav-link{
-            font-size: 1.9rem;
-            text-align: center;
+            font-size: 1.9rem;        
+            margin-left: 5rem;       
+            text-align: right;
+        }
+        .nav-link:hover{
+            font-weight: bold;
+        }
+        #about{
+            font-weight: bold;
         }
     }
 
